--- a/styles/architect.css
+++ b/styles/architect.css
@@ -15,6 +15,9 @@
     border: none;
     cursor: pointer;
 }
+.text-light-gray{
+    color: #727272;
+}
 
 
 /* header section */
@@ -59,42 +62,16 @@ nav li a{
     font-weight: 700;
     color: #131313;
 }
-.banner-description{
-    color: #727272;
-}
+
 .banner img{
     width: 100%;
     margin-top: 20px;
 }
-
-
-/* responsive media queries */
-
-/* small devices */
-@media screen and (max-width: 576px) {
-    header{
-        padding: 20px;
-    }
-    nav{
-        flex-direction: column;
-    } 
-}
-
-/* tablet or medium devices */
-@media screen and (min-width: 576px) and (max-width: 960px) {
-    header{
-        padding: 20px;
-    }
-    nav{
-        flex-direction: column;
-    } 
-}
-
 /* main styles */
 main{
     /* border: 2px solid rebeccapurple; */
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 
 /* teams styles */
@@ -116,10 +93,40 @@ main{
     font-size: 2.8rem;
 }
 .teams-title .quick-list{
-    color: #727272;
     font-weight: 500;
 }
 .teams-title .text-features{
     color: #ff900e;
     font-weight: 700;
+}
+
+/* responsive media queries */
+
+/* small devices */
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    nav,
+    .teams-container
+    {
+        flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .teams-content{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+/* tablet or medium devices */
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    header{
+        padding: 20px;
+    }
+    nav, .teams-container{
+        flex-direction: column;
+    } 
 }
