--- a/styles/architect.css
+++ b/styles/architect.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 
-/* sheared styles */
+/* common sheared styles */
 *{
     font-family: "Open Sans", serif;
 }
@@ -18,6 +18,11 @@
 .text-light-gray{
     color: #727272;
 }
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
 
 
 /* header section */
@@ -29,11 +34,6 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-.nav-title{
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #131313;
 }
 nav ul{
     display: flex;
