--- a/styles/architect.css
+++ b/styles/architect.css
@@ -100,6 +100,31 @@ main{
     font-weight: 700;
 }
 
+/* facts section */
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+.facts-card-container .card{
+    border-radius: 8px;
+    border: 1px solid #ff900e;
+    text-align: center;
+    font-size: 2.8rem;
+    padding: 30px;
+}
+.facts-card-container .card-title{
+    /* border: 1px solid royalblue; */
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+.facts-card-container .card-stats{
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 /* responsive media queries */
 
 /* small devices */
