--- a/styles/architect.css
+++ b/styles/architect.css
@@ -100,6 +100,34 @@ main{
     font-weight: 700;
 }
 
+/* feature section */
+.feature{
+    margin-top: 130px;
+    display: flex;
+    gap: 100px;
+}
+.feature .section-title{
+    border-left: 5px solid #ff900e;
+    padding-left: 20px;
+}
+.feature-content .card{
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #fff;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+}
+.ten-years-badge{
+    border-radius: 8px;
+    background: #ff900e;
+    color: #fff;
+    width: 342px;
+    padding: 40px;
+}
+.ten-years-badge h2{
+    font-size: 4rem;
+}
+
 /* facts section */
 .facts-card-container{
     display: flex;
